feat: refactor error handling and improve test coverage for video operations